# c-raylib-hot-reloading

./: .gitignore  CMakeLists.txt  ClangOverrides.txt  Makefile  README.md
libs/game/: Makefile
libs/game/src/: color.h  game.c  game.h
src/: color.c  main.c  rust.h  utils.c  utils.h  watch.c  watch.h
